[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "0.1.0"
description = "A library for LLaVA functionalities."
authors = [
    { name = "Nvidia Vila, forked by Thomas", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
dependencies = []  # Add any required dependencies here
